2/24/19
    - Unless you're switching between moves rapidly the client will only send up to 10 moves per second roughly
    - Random keys that are not caught by the client and sent to the server are also delayed if it's the same key, like above
    - Fixed ui bugs on the crafting window
    -

2/22/19
    - Added in Dark mode for a different kind of experience, will expand on this further later on
    - Freecam can have its angle locked now, when locked use shift to move around. Camera -> Free Cam lock elevation
    - Stockpiles have the take all, add all, take #, add # buttons and entry added back. For the entry box you can scroll
      to change the number easily or use the buttons or type it..
    - Option to always show the long tooltip for items. Gameplay -> "Always show longtip..". By default it's on.
    - The equipment screen will now show all buffs/debuffs from gear listed out in the bottom right
    - Added back the wear meter to items, it's on by default.
    - Hitbox are now raised 2 units and boxy now

2/21/19
    - Added in options for reversing Freecam drag axis. Under Camera Settings.
    - Frame now inherits Window color for themes.
    - Can now modify button, textbox, and slider colors under Theme settings

2/20/19
    - Brought back themes for the main hud elements. By default you use sloth theme. You can change theme under Options
    "Theme Settings". You can also tint the color of windows in those options as well to colorize your theme to your
    liking.

2/17/19
    - Any tracking/dowsing use now spawns a window "Drowse" that tells you the angles and lets you change the color
      The angle will be visible until you close this window

2/16/19
    - Skip Loading now works properly. Should no longer black screen, etc.
    - Changed nightvision -> Custom global light. Added in options to customize the color to your liking. Pure black of
    everything for maximum larp of course. Default is pure white for the cowards.