@@ -1,4 +1,4 @@
-2d4ef534df534093978d1802ac289c02a7b4cb2b
+eccdabae975d77360f6b1e6d008244a6f048ab94
 bcprov-jdk15on-160.jar=7f1a0e6badab38666f8467a9a0ee96656b2f8ec8623867ed34f3cdc173b7ee07
 builtin-res.jar=eaa8afa31eb4141760656ceb3dc80aeaf19256dab25944173dbd606ad0b5e8cf
 commons-codec-1.10.jar=4241dfa94e711d435f29a4604a3e2de5c4aa3c165e23bd066be6fc1fc4309569
@@ -92,7 +92,7 @@ gluegen-rt-natives-windows-amd64.jar=3474017422eff384db466bdb56c96c61220c43133a9
 gluegen-rt-natives-windows-i586.jar=4eeed9fc2ebea5b9dc48a342b9478d127e989a2e1aa7129b512a98ec75cde338
 gluegen-rt.jar=084844543b18f7ff71b4c0437852bd22f0cb68d7e44c2c611c1bbea76f8c6fdf
 hafen-res.jar=b0c1874c0a5c22ce0509da73e3ccb7fa0131f92095729e39dfd883052c9be8f1
-hafen.jar=aa6c175227ec217969331b0b878fdd5336e2d64c2e080e06b7813446e2773059
+hafen.jar=3308386124ca4ce31e0608f7cfcd7bb853923965f1cb937663796dfd7c2c81c2
 jogl-all-natives-android-aarch64.jar=b75cff85f36500b5667288b578a8c0219865b981421aea375f8c7cb6a99068d8
 jogl-all-natives-android-armv6.jar=14968b95b68e6eeff465d8f0e62f70fd88fdd1a121894060071696277407023e
 jogl-all-natives-linux-amd64.jar=82637302ae9effdf7d6f302e1050ad6aee3b13019914ddda5b502b9faa980216
