@@ -2,7 +2,12 @@
     - Unless you're switching between moves rapidly the client will only send up to 10 moves per second roughly
     - Random keys that are not caught by the client and sent to the server are also delayed if it's the same key, like above
     - Fixed ui bugs on the crafting window
-    -
+    - Added back auto equiping. This time it's alt + right click. Works on most items, somethings like Bucket it won't.
+        - If something is missing tell me.
+        - By default it's on. Can be turned off in Gameplay settings
+    - Added back the content meter for items that can store other items. By default it's on. Can be turned off in
+      Gameplay settings
+    - FPS will now display in top right, can be turned off in Gameplay settings
 
 2/22/19
     - Added in Dark mode for a different kind of experience, will expand on this further later on
